Added MarkdownGuide.html and link to it from editor menu.

--- a/MarkdownViewer/App.config
+++ b/MarkdownViewer/App.config
@@ -16,6 +16,12 @@
       <setting name="HtmlTemplateFilePath" serializeAs="String">
         <value>{{{RESOURCES_DIRECTORY}}}\HTML_TEMPLATE.html</value>
       </setting>
+      <setting name="MarkdownGuideFile" serializeAs="String">
+        <value>{{{RESOURCES_DIRECTORY}}}\MarkdownGuide.html</value>
+      </setting>
+      <setting name="MarkDownGuideURL" serializeAs="String">
+        <value>http://nextstepwebs.github.io/simplemde-markdown-editor/markdown-guide</value>
+      </setting>
     </MarkdownViewer.Properties.Settings>
   </userSettings>
 </configuration>
